
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct dsmsg {int hdr; } ;
typedef int mach_msg_size_t ;
typedef int kern_return_t ;


 int MACH_MSG_OPTION_NONE ;
 int MACH_MSG_TIMEOUT_NONE ;
 int MACH_PORT_NULL ;
 int MACH_SEND_MSG ;
 char* mach_error_string (int ) ;
 int mach_msg (int *,int,int ,int ,int ,int ,int ) ;
 int printf (char*,char*) ;

void* do_thread(void* arg) {
  struct dsmsg* msg = (struct dsmsg*)arg;
  for(;;){
    kern_return_t err;
    err = mach_msg(&msg->hdr,
                   MACH_SEND_MSG|MACH_MSG_OPTION_NONE,
                   (mach_msg_size_t)sizeof(struct dsmsg),
                   0,
                   MACH_PORT_NULL,
                   MACH_MSG_TIMEOUT_NONE,
                   MACH_PORT_NULL);
    printf("%s\n", mach_error_string(err));
  }
  return ((void*)0);
}
