; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/macos/dos/extr_40954.c_do_thread.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/macos/dos/extr_40954.c_do_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dsmsg = type { i32 }

@MACH_SEND_MSG = common dso_local global i32 0, align 4
@MACH_MSG_OPTION_NONE = common dso_local global i32 0, align 4
@MACH_PORT_NULL = common dso_local global i32 0, align 4
@MACH_MSG_TIMEOUT_NONE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @do_thread(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.dsmsg*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.dsmsg*
  store %struct.dsmsg* %6, %struct.dsmsg** %3, align 8
  br label %7

7:                                                ; preds = %7, %1
  %8 = load %struct.dsmsg*, %struct.dsmsg** %3, align 8
  %9 = getelementptr inbounds %struct.dsmsg, %struct.dsmsg* %8, i32 0, i32 0
  %10 = load i32, i32* @MACH_SEND_MSG, align 4
  %11 = load i32, i32* @MACH_MSG_OPTION_NONE, align 4
  %12 = or i32 %10, %11
  %13 = load i32, i32* @MACH_PORT_NULL, align 4
  %14 = load i32, i32* @MACH_MSG_TIMEOUT_NONE, align 4
  %15 = load i32, i32* @MACH_PORT_NULL, align 4
  %16 = call i32 @mach_msg(i32* %9, i32 %12, i32 4, i32 0, i32 %13, i32 %14, i32 %15)
  store i32 %16, i32* %4, align 4
  %17 = load i32, i32* %4, align 4
  %18 = call i8* @mach_error_string(i32 %17)
  %19 = call i32 @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %18)
  br label %7
}

declare dso_local i32 @mach_msg(i32*, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @printf(i8*, i8*) #1

declare dso_local i8* @mach_error_string(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
